@@ -50,6 +50,7 @@ typedef struct
 {
     struct net_device *dev; /**< net_device for virtual ethernet device */
     struct net_device_stats stats; /**< device statistics */
+    uint8_t registered; /**< net_device is opened */
     uint8_t opened; /**< net_device is opened */
 }
 ec_debug_t;
@@ -58,6 +59,8 @@ ec_debug_t;
 
 int ec_debug_init(ec_debug_t *, const char *);
 void ec_debug_clear(ec_debug_t *);
+void ec_debug_register(ec_debug_t *, const struct net_device *);
+void ec_debug_unregister(ec_debug_t *);
 void ec_debug_send(ec_debug_t *, const uint8_t *, size_t);
 
 /*****************************************************************************/
