@@ -13,6 +13,8 @@ Changes since 1.4.0:
   Introduced new method ec_datagram_zero() for that.
 * Added phy_read and phy_write commands to ethercat tool.
 * Added driver for Intel PRO/100 NICs.
+* Debug interfaces are created with the Ethernet addresses of the attached
+  physical device.
 
 Changes since 1.4.0-rc3:
 
